Compiles and runs now (from CLI) without jersey